[package]
name = "tokio_serial_pacing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6.0"
pin-project-lite = "0.2.13"
serialport = { version = "4.3.0", default-features = false }
tokio = { version = "1.36.0", features = ["time"] }
tokio-serial = "5.4.4"

[dev-dependencies]
tokio = { version = "1.36.0", features = ["time", "macros", "rt", "io-util"] }
