[package]
name = "tokio_serial_pacing"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "A pacing wrapper for SerialStream to ensure silence between Read & Write operations"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pin-project-lite = "0.2.13"
tokio = { version = "1.36.0", features = ["time"] }
tokio-serial = "5.4.4"

[dev-dependencies]
serialport = { version = "4.3.0", default-features = false }
tokio = { version = "1.36.0", features = ["time", "macros", "rt", "io-util"] }
